# sanctifier

./: .dockerignore  .env.example  .gitignore  .sanctifier_cache.json  .sanctify.toml  ARCHITECTURE.md  COMPLETION_REPORT.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_INDEX.md  Dockerfile  GALLERY_COMPLETION_REPORT.md  GALLERY_DEPLOYMENT_CHECKLIST.md  GALLERY_IMPLEMENTATION_SUMMARY.md  GALLERY_INDEX.md  GETTING_STARTED.md  IMPLEMENTATION_ISSUE_365.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  REENTRANCY_PATTERN_DETECTION_IMPLEMENTATION.md  SECURITY.md  SOROBAN_DEPLOYMENT.md  TODO.md  package-lock.json  test_contract.rs
.devcontainer/: devcontainer.json  setup.sh
.github/: CODEOWNERS  DISCUSSIONS_ONBOARDING_GUIDE.md  GOOD_FIRST_ISSUES.md  PULL_REQUEST_TEMPLATE.md  README_CONTRIBUTING_ONRAMP.md  ROADMAP.md  STARTER_PACK_TRACKING.md  dependabot.yml  discussions.yml  labeler.yml
.github/ISSUE_TEMPLATE/: adopter_submission.yml  bug_report.md  bug_report.yml  config.yml  docs_update.md  feature_request.md  feature_request.yml  good_first_issue.yml  security.md
.github/workflows/: add-to-project.yml  ci.yml  fv-kani.yml  issue-labeler.yml  labeler.yml  pr-size.yml  publish.yml  release.yml  soroban-deploy.yml
Formula/: sanctifier.rb
contracts/: README.md
contracts/amm-pool/: Cargo.toml  README.md
contracts/kani-poc/: Cargo.toml
contracts/my-contract/: Cargo.toml
contracts/protected-vault/: Cargo.toml
contracts/reentrancy-guard/: CHANGELOG.md  Cargo.toml  README.md
contracts/runtime-guard-wrapper/: Cargo.toml  README.md
contracts/sep41-token-invariants/: Cargo.toml
contracts/test-recursion/: Cargo.toml
contracts/token-invariants/: Cargo.toml
contracts/vulnerable-contract/: .sanctifier_cache.json  Cargo.toml
contracts/vulnerable-contract/src/: .sanctifier_cache.json  lib.rs
contracts/zk-verifier/: Cargo.toml
contracts/zk-verifier/src/: lib.rs
data/: findings-showcase.json  vulnerability-db.json
data/reports/: .gitkeep
data/vulnerabilities/: SOB-2024-014.yaml  SOB-2024-017.yaml  SOB-2024-018.yaml  SOB-2024-020.yaml  SOB-2024-021.yaml  SOB-2024-022.yaml  SOB-2024-024.yaml  SOB-2024-025.yaml  SOB-2024-028.yaml  SOB-2024-030.yaml  SOL-2024-002.yaml  SOL-2024-004.yaml  SOL-2024-005.yaml  SOL-2024-006.yaml  SOL-2024-007.yaml  SOL-2024-008.yaml  SOL-2024-009.yaml  SOL-2024-011.yaml  SOL-2024-012.yaml
docs/: ADOPTERS_AND_FINDINGS.md  DEPLOYMENT_IMPLEMENTATION.md  GALLERY_PUBLISHING_GUIDE.md  GALLERY_SUBMISSIONS.md  HYGIENE_RULES.md  QUICK_REFERENCE.md  README.md  SNAPSHOT_REVIEW_WORKFLOW.md  awesome-soroban-security.md  ci-cd-setup.md  cli.md  configuration.md  contributor-onramp.md  deployment-config.md  detector-cookbook.md  differential-soroban-linters.md  differential-testing.md  error-codes.md  faq.md  formal-verification-video-series.md  getting-started.md  getting_started.md  glossary.md  installation.md  invariant-dsl.md  kani-integration.md  migration.md  positioning.md  realtime-streaming.md  recursion-depth-limiter.md  reentrancy-guardian.md  reentrancy-pattern-detection.md  rule-engine.md  runtime-guards-integration.md  sanctity-score.md  sep41-formal-spec-template.md  soroban-deployment.md  soroban-sdk-compatibility.md  storage-type-validator.md  vscode-extension.md  (+2 more)
docs/adr/: 001-record-architecture-decisions.md  002-use-rust-for-core-implementation.md  003-static-vs-runtime-analysis.md  004-plugin-system-design.md  005-wasm-parsing-infrastructure.md
docs/api/: custom-rules.md
docs/case-studies/: admin-takeover.md
docs/ci/: jenkins.md
docs/detectors/: README.md  allowance_race.md  arg_dos.md  arithmetic_overflow.md  auth_gap.md  balance_equality.md  division_by_zero.md  edge_amount.md  error_code_collision.md  excessive_clone.md  fee_rounding.md  hardcoded_addr.md  init_hardcoded_admin.md  ledger_seconds.md  ledger_size.md  missing_ttl.md  panic_detection.md  sanct_unwrap.md  sanct_visibility.md  shift_overflow.md  state_write_in_view.md  unbounded_storage.md  unhandled_result.md  unsigned_underflow.md  unused_variable.md  view_panic.md
docs/talks/: README.md  securing-soroban-demo-script.md  securing-soroban-slides.md
editors/vscode/: README.md  package-lock.json  package.json  tsconfig.json
frontend/: PRODUCTION_HARDENING.md  README.md  package-lock.json  package.json  pr-122-storybook.md
frontend/.husky/: pre-commit
frontend/.storybook/: main.ts  preview.ts
frontend/app/: globals.css  layout.tsx  page.tsx  types.ts
frontend/data/: adopters.json  vulnerability-db.json
my-contract/: Cargo.toml
my-contract/src/: circuit_breaker.rs  guards.rs  lib.rs  state.rs
scripts/: deploy-soroban-testnet.sh  deploy.sh  differential-test.sh  gallery-maintenance.sh  review-snapshots.ps1  setup.sh  soroban-sdk-compat.sh  validate-runtime-guards.sh
tooling/config/: config.rs
tooling/sanctifier-cli/: .sanctify.toml  Cargo.toml
tooling/sanctifier-cli/src/: branding.rs  config.rs  llm.rs  logging.rs  main.rs  reporter.rs  score.rs  vulndb.rs  ws_server.rs  zk.rs
tooling/sanctifier-cli/src/commands/: analyze.rs  attest.rs  badge.rs  baseline.rs  cve.rs  deploy.rs  diff.rs  explain.rs  fix.rs  init.rs  mod.rs  prove.rs  stream.rs  symbolic.rs  update.rs  verify.rs  wasm.rs  watch.rs  webhook.rs
tooling/sanctifier-cli/src/rules/: mod.rs  tests.rs
tooling/sanctifier-cli/templates/amm/src/: lib.rs  test.rs
tooling/sanctifier-cli/templates/rbac/src/: lib.rs  test.rs
tooling/sanctifier-cli/templates/timelock/src/: lib.rs  test.rs
tooling/sanctifier-cli/templates/token/: Cargo.toml.template
tooling/sanctifier-cli/templates/token/src/: lib.rs  test.rs
tooling/sanctifier-cli/tests/: attest.rs  cli_tests.rs  diff_tests.rs  llm_tests.rs  prove_cli.rs
tooling/sanctifier-cli/tests/fixtures/: .sanctifier_cache.json  arithmetic.rs  deprecated.rs  ledger_size.rs  macro_heavy.rs  reentrancy.rs  storage_collision.rs  unused.rs  upgrade.rs  valid_contract.rs  vulnerable_contract.rs
tooling/zk/: Cargo.toml
tooling/zk/benches/: zk_bench.rs
tooling/zk/src/: circuit.rs  encoding.rs  lib.rs  params.rs
(+316 files in other folders)
