[workspace]
members = [
    "tooling/sanctifier-cli",
    "tooling/sanctifier-core",
    "tooling/sanctifier-wasm",
    "tooling/sanctifier-sdk",
    "contracts/vulnerable-contract",
    "contracts/token-with-bugs",
    "contracts/amm-pool",
    "contracts/reentrancy-guard",
    "contracts/protected-vault",
    "contracts/runtime-guard-wrapper",
    "contracts/kani-poc",
    "contracts/reentrancy-guardian",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = "20.0.0"

[workspace.lints.rust]
unexpected_cfgs = "allow"

[workspace.lints.clippy]
all = "warn"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1



