[package]
name = "vulnerable-contract"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }


[lib]
crate-type = ["cdylib"]

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

