[package]
name = "vulnerable-contract"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
soroban-sdk = "20.0.0"

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[lib]
crate-type = ["cdylib"]
