[package]
name = "sanctifier-zk-verifier"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
soroban-sdk = { workspace = true }
ark-groth16 = { version = "0.6.0", default-features = false }
ark-bls12-381 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-serialize = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-snark = { version = "0.4.0", default-features = false }
wee_alloc = "0.4.5"

[lib]
crate-type = ["cdylib", "rlib"]
