[workspace]
members = ["."]

[package]
name = "sanctifier-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for Sanctifier - Stellar Soroban Security Suite"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"
anyhow = "1.0"
sanctifier-core = { version = "0.1.0", path = "../sanctifier-core", default-features = false }
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
colored = "2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
notify = "6"
ctrlc = "3.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
figment = { version = "0.10", features = ["toml", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
quick-xml = "0.31"
uuid = { version = "1.0", features = ["v4"] }
atty = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.8"

[[bin]]
name = "sanctifier"
path = "src/main.rs"